AG-10590 - fixed charts thumbnail alignment

--- a/grid-community-modules/styles/src/internal/base/parts/_charts.scss
+++ b/grid-community-modules/styles/src/internal/base/parts/_charts.scss
@@ -344,22 +344,6 @@
     .ag-chart-mini-thumbnail {
         border: 1px solid var(--ag-secondary-border-color);
         border-radius: 5px;
-        margin: 5px;
-
-        // specific style to apply when there are 3 items in the row
-        &:nth-last-child(3),
-        &:nth-last-child(3) ~ .ag-chart-mini-thumbnail {
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        &:first-child {
-            @include ag.unthemed-rtl((margin-left: 0));
-        }
-
-        &:last-child {
-            @include ag.unthemed-rtl((margin-right: 0));
-        }
 
         &.ag-selected {
             border-color: var(--ag-minichart-selected-chart-color);
@@ -414,8 +398,9 @@
         @include ag.vertical-widget-container();
     }
 
-    .ag-charts-group-container.ag-group-container-horizontal {
-        padding: var(--ag-grid-size);
+    .ag-charts-settings-group-container.ag-group-container-horizontal {
+        gap: calc(var(--ag-grid-size) * 2);
+        row-gap: var(--ag-grid-size);
     }
 
     .ag-chart-data-section,
